--- a/index.html
+++ b/index.html
@@ -38,17 +38,13 @@
                     <i class="fa-solid fa-chevron-right"></i>
                 </span>
             </div>
+            <!-- Common Search Bar -->
+            <div class="search-bar">
+                <span> <i class="fa-solid fa-search"></i>
+                </span>
+                <input type="text" placeholder="Search..." class="text-label">
+            </div>
             <div class="content">
-
-
-
-                <!-- Common Search Bar -->
-                <div class="search-bar">
-                    <span class="search-icon"> <i class="fa-solid fa-search"></i>
-                    </span>
-                    <input type="text" placeholder="Search..." class="text-label">
-                </div>
-
                 <!-- Dynamic Content Area (all pre-written) -->
                 <div id="dynamicContent">
                     <!-- Dashboard Section -->
@@ -56,7 +52,6 @@
 
                         <div class="category-heading text-label">Dashboard Types</div>
 
-                        <div class="task-group">
                             <div class="task-header">
                                 <i class="fa-regular fa-eye"></i><span class="text-label">Overview</span>
                             </div>
@@ -96,11 +91,9 @@
                                 <div class="sub-item text-label">Profit & Loss Summary</div>
 
                             </div>
-                        </div>
 
                         <div class="category-heading text-label">Report Summaries</div>
 
-                        <div class="task-group">
                             <div class="task-header" onclick="toggleSubTasks(this)">
                                 <i class="fa-regular fa-clipboard"></i>
                                 <span class="text-label">Weekly Reports</span>
@@ -141,10 +134,8 @@
 
 
                             </div>
-                        </div>
                         <div class="category-heading text-label">Business Intelligence</div>
 
-                        <div class="task-group">
                             <div class="task-header" onclick="toggleSubTasks(this)">
                                 <i class="fa-regular fa-chart-bar"></i>
                                 <span class="text-label">Performance Metrics</span>
@@ -172,11 +163,10 @@
                             </div>
 
                         </div>
-                    </div>
 
                     <!-- Tasks Section -->
                     <div class="section" id="tasksSection" style="display:none;">
-                        <div class="task-group">
+                        <div>
                             <div class="category-heading text-label">Quick Actions</div>
                             <div class="task-header">
                                 <i class="fa-solid fa-plus"></i><span class="text-label">New Task</span>
@@ -187,7 +177,6 @@
                         </div>
                         <div class="category-heading text-label">My Tasks</div>
 
-                        <div class="task-group">
                             <div class="task-header" onclick="toggleSubTasks(this)">
                                 <i class="fa-solid fa-calendar-day"></i>
                                 <span class="text-label">Due Today</span>
@@ -217,24 +206,19 @@
                                 <div class="sub-item text-label">Update dependencies</div>
                                 <div class="sub-item text-label">Code review completed</div>
                             </div>
-                        </div>
                         <div class="category-heading text-label">Other</div>
 
-                        <div class="task-group">
                             <div class="task-header">
                                 <i class="fa-regular fa-star"></i>
                                 <span class="text-label">Priority tasks</span>
                                 <span><i class="text-label arrow fa-solid fa-chevron-down"></i></span>
                             </div>
-                        </div>
-                        <div class="task-group">
                             <div class="task-header">
 
                                 <i class="fa-solid fa-box-archive"></i>
 
                                 <div class="text-label">Archived</div>
                             </div>
-                        </div>
                     </div>
                     <!-- Settings Section -->
                     <div class="section" id="settingsSection" style="display:none;">
